# aoc2021

./: CMakeLists.txt  README.md  main.cpp
Dec1/: Solution.cpp  Solution1  Solution1.cpp  Solution2  Solution2.cpp
Utils/include/: Slider.h
include/: Declarations.h
